2007-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Add support for -monitor option to 'animate',
	'display', and 'import'.
	* coders/fpx.c (WriteFPXImage): Fix compilation problem.
	* coders/dpx.c (TentUpsampleChroma): Fix access beyond array.  Use
	integer calculations where possible.

2007-11-07  Andy Armstrong  <andy@hexten.net>

	* PerlMagick/t/setattribute.t: Fix for typo which breaks
	Test::Harness 3.00.

2007-10-20  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* mat.c: Attempt to read 'logic' type modification 
        as monochrome image.

2007-10-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlob?SBFoo): Return 0 on EOF conditions
	rather than a magic value concocted using ~0.  The magic value was
	very sensitive to the size/range of the type used to pass and
	store it, leading to increased possibility of error.  There was
	also concern that sometimes a successfully read value may match
	the magic value.  Added documentation that EOFBlob() may be used
	to determine that the blob is in EOF state.
	* coders/pix.c (ReadPIXImage): Avoid reliance on a particular
	magic value being returned from ReadBlobMSBShort on EOF.
	* coders/avs.c (ReadAVSImage): Avoid reliance on a particular
	magic value being returned from ReadBlobMSBLong() on EOF.

2007-10-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* wpg.c: Monochrome images are not using palette - 
	palette is discarded in this case.

2007-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.h: Blob I/O APIs now use sized types so that passed
	and returned data values are a specific size rather than
	architecture dependent.
	* PerlMagick/t/read.t: Added read test for unsigned 32-bit LSB MAT
	format.

2007-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Use appropriate sized cast for DIB
	width and height values.  Validate width and height values.