@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2007-11-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/image.c (IsImagesEqual): Allow comparing images if the
+        colorspace enumeration is different but the images are both an RGB
+        type.
+
+</UL>
+<p>
 2007-11-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
